--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
-    "socket.io-client": "^2.3.1"
+    "socket.io-client": "^2.3.1",
+    "url-loader": "^4.1.1"
   }
 }
