--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ python-dateutil==1.5
 python-dotenv==0.14.0
 python-engineio==3.13.2
 python-socketio==4.6.0
+requests==2.24.0
 SQLAlchemy==1.3.19
 
