--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.1.21",
     "style-loader": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
@@ -31,6 +32,8 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^4.0.0",
+    "react-google-login": "^5.1.21",
     "socket.io-client": "^2.3.1",
     "url-loader": "^4.1.1"
   }
