Heroku oauth test

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_KEY='338963299857-ljp88d5pm444n5g7f18ocek5k0olah9d.apps.googleusercontent.com'
+REACT_APP_KEY=338963299857-ljp88d5pm444n5g7f18ocek5k0olah9d.apps.googleusercontent.com
